--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'cepservice'
 include 'usecase'
 include 'entity'
-include 'persistence-adapter'
 include 'persistence_adapter'
-
+include 'persistence'
