--- a/controller/build.gradle
+++ b/controller/build.gradle
@@ -3,5 +3,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':usecase')
+    compile "com.sparkjava:spark-core:2.5.5"
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
