--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -4,5 +4,6 @@ repositories {
 
 dependencies {
     compile project(':persistence_adapter')
+    compile project(':entity')
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
